fix: container overflow issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 80px;
+  background-color: #F7F7F8 !important;
 }
 
 a {
